# AurantisSync

./: .gitignore  AurantisSync.code-workspace  CHANGELOG.md  INSTRUCOES_FINAIS_UPLOAD.md  LICENSE  ORGANIZACAO_CONCLUIDA.md  PROJECT_CONFIG.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UPLOAD_GITHUB_RESUMO.md  aurantis_sync_mvp.py  build_advanced.py  create_exe.bat  pyproject.toml  run.sh  run_structured_app.bat  test_git.py  upload_simples.cmd  upload_to_github.py
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  pages.yml
app/: __init__.py  config.py  main.py
app/core/: audio_player.py  exporters.py  project_io.py  sync_model.py  transcriber.py  waveform.py
app/ui/: main_window.py  main_window_improved.py
app/widgets/: lines_table.py  waveform_widget.py
docs/: ARCHITECTURE.md  ATUALIZACOES_GITHUB.md  CONTRIBUTING.md  CRIAR_EXECUTAVEL.md  EXECUTAVEL_GUIA.md  GITHUB_UPLOAD.md  GIT_PROBLEMA_SOLUCAO.md  INDEX.md  INSTRUCOES_FINAIS.md  POWERSHELL_SETUP.md  QUICK_START_POWERSHELL.md  README.md  SOLUCAO_PROBLEMAS_GIT.md
scripts/: Create-Executable.ps1  Setup-And-Run-AurantisSync.ps1  Upload-To-GitHub.ps1  build.py  build_exe.bat  build_exe.py  cleanup_project.py  fix_git_upload.bat  git_upload.bat  run.bat  start_app.bat  test_basic.ps1  test_powershell_setup.ps1  test_project_structure.ps1  test_simple.ps1  test_structure.ps1  test_structured_app.py  upload_final.cmd  upload_github.py  upload_github_final.cmd
tests/: test_app.py  test_mvp.py
